getproductbyname
