# route/productRoute.js
@@ -1,4 +1,4 @@
-import { TestProduct,AddProduct,GetProducts,UpdateProduct,GetProductById,GetProductsByCategory,DeleteProduct} from "../controller/productController.js";
+import { TestProduct,AddProduct,GetProducts,UpdateProduct,GetProductByName,GetProductsByCategory,DeleteProduct} from "../controller/productController.js";
 import express from "express";
 import upload from "../middleware/multer.js";
 import {authenticateToken,authorize} from "../middleware/authethicateToken.js"
@@ -8,7 +8,7 @@ route.get("/test",TestProduct);
 route.post("/addProduct",upload.single('image'),authenticateToken,authorize("seller"),AddProduct);
 route.get("/getProducts",GetProducts);
 route.put("/updateProduct/:id",authenticateToken,authorize("seller"),UpdateProduct);
-route.get("/getProductById/:id",GetProductById);
+route.get("/getProductByName/:name",GetProductByName);
 route.get("/getProductsByCategory/:category",GetProductsByCategory);
 route.delete("/deleteProduct/:id",authenticateToken,authorize("seller"),DeleteProduct);
 export default route;
